--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.10.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.1",
     "superagent": "^8.0.9",
     "superagent-promise": "^1.1.0",
     "web-vitals": "^2.1.4"
