--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
